# Lab_WB_PFF

./: .env.example  .env.production.example  .gitattributes  .gitignore  DOCKER_DEV.md  Makefile  PFF N°1  Assistant IA et automatisa.txt  README.md  architectural_assessment.md  architecture_review.md  brutal_project_review.md  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  pff_demo_script.md  pff_gap_analysis.md  pff_technical_documentation.md  production_deployment_guide.md  task.md
fastapi_app/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.dev.sh  entrypoint.sh  main.py  pyproject.toml
fastapi_app/alembic/: env.py
fastapi_app/alembic/versions/: 20260325_0001_initial.py  20260325_0002_operator_auth.py  20260326_0003_knowledge_chunks.py  20260407_0001_runtime_settings.py  20260411_0001_pdf_alignment.py  340c7bc3b7f8_add_pricing_rules.py  843ff2bd9b06_add_labresult_model.py  a1b2c3d4e5f6_add_retry_count_and_new_statuses.py
fastapi_app/app/: application.py
fastapi_app/app/api/: router.py
fastapi_app/app/core/: config.py  security.py
fastapi_app/app/db/: base.py  session.py
fastapi_app/app/schemas/: admin.py  auth.py  catalog.py  chatbot.py  health.py  intake.py  result.py
fastapi_app/app/workers/: scheduler.py
fastapi_app/data/: catalog_data.json
fastapi_app/http/: intake_endpoints.http  intake_endpoints.postman_collection.json
fastapi_app/scripts/: parse_ncb_pdf.py  seed_catalog.py  seed_real_world_data.py
fastapi_app/tests/: conftest.py
fastapi_app/tests/unit/: test_auth_guard.py  (+5 more)
(+136 files in other folders)
